<resources>
    <string name="app_name">Mark of RISS</string>
    <string name="nendai">年代別出題</string>
    <string name="jannru">ジャンル別出題</string>
    <string name="rireki">履歴情報</string>
    <string name="toukei">統計情報</string>
    <string name="sc">セキュリティ</string>
    <string name="sc_kanri">セキュリティ管理</string>
    <string name="sc_hyoka">セキュリティ技術評価</string>
    <string name="sc_taisaku">情報セキュリティ対策</string>
    <string name="sc_gijutu">セキュリティ実装技術</string>
    <string name="db_nw">データベース・ネットワーク</string>
    <string name="si_so">システム・ソフトウェア</string>
    <string name="ma_si">マネジメント・システム監査</string>
    <string name="jannru_to">ジャンル別統計</string>
    <string name="ap_taisaku">SC午前対策</string>

    <string name="genre">ジャンル</string>
    <string name="seikai">正解数</string>
    <string name="kaitou">回答数</string>
    <string name="wariai">正答率</string>
</resources>
