<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="jp.ac.asojuku.jousenb.markofriss.genre">

    <TextView
        android:id="@+id/textView_jenre"
        android:layout_width="234dp"
        android:layout_height="122dp"
        android:text="@string/jannru"
        android:textSize="40dp"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="16dp" />

    <TableLayout
        android:layout_width="286dp"
        android:layout_height="276dp"
        tools:layout_editor_absoluteX="57dp"
        tools:layout_editor_absoluteY="172dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button_"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sc"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="182dp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sc_kanri"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="182dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sc_hyoka"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="262dp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sc_taisaku"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="262dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sc_gijutu"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="339dp" />

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/db_nw"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="339dp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/si_so"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="75dp"
                tools:layout_editor_absoluteY="410dp" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ma_si"
                android:textSize="10dp"
                tools:layout_editor_absoluteX="221dp"
                tools:layout_editor_absoluteY="410dp" />
        </TableRow>
    </TableLayout>
</android.support.constraint.ConstraintLayout>
