<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jp.ac.asojuku.jousenb.markofriss.MainActivity">


    <TextView
            android:id="@+id/textView"
            android:layout_width="260dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="50dp"
            tools:layout_editor_absoluteY="70dp"
            tools:text="@string/app_name" />

        <Button
            android:id="@+id/button"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:text="@string/nendai" />

        <Button
            android:id="@+id/button2"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/jannru" />

        <Button
            android:id="@+id/button3"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_below="@+id/button2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/rireki" />

        <Button
            android:id="@+id/button4"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_alignLeft="@+id/button2"
            android:layout_alignStart="@+id/button2"
            android:layout_below="@+id/button3"
            android:layout_marginTop="20dp"
            android:text="@string/jannru_to" />

</RelativeLayout>
